src/ui/radarr_ui/collections/snapshots/managarr__ui__radarr_ui__collections__collection_details_ui__collection_details_ui_tests__tests__snapshot_tests__CollectionDetails.snap
---
source: src/ui/radarr_ui/collections/collection_details_ui_tests.rs
expression: output
---
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                    ╭  Test Collection  ───────────────────────────────────────────────────────────────────────────────────────────────────────╮                     
                    │Overview: Collection blah blah blah                                                                                       │                     
                    │Root Folder Path: /nfs/movies                                                                                             │                     
                    │Quality Profile: HD - 1080p                                                                                               │                     
                    │Minimum Availability: Released                                                                                            │                     
                    │Monitored: Yes                                                                                                            │                     
                    │Search on Add: Yes                                                                                                        │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │  Movies  ────────────────────────────────────────────────────────────────────────────────────────────────────────────────│                     
                    │   ✔  Title                   Year      Runtime      IMDB Rating  Rotten Tomatoes Rating Genres                           │                     
                    │=> ✔  Test                    2023      2h 0m        9.9          99%                    cool, family, fun                │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    ╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
