src/ui/radarr_ui/collections/snapshots/managarr__ui__radarr_ui__collections__collection_details_ui__collection_details_ui_tests__tests__snapshot_tests__collection_details_ui_renders_movie_overview_when_the_modal_is_absent.snap
---
source: src/ui/radarr_ui/collections/collection_details_ui_tests.rs
expression: output
---
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                    ╭  Test Collection  ───────────────────────────────────────────────────────────────────────────────────────────────────────╮                     
                    │Overview: Collection blah blah blah                                                                                       │                     
                    │Root Folder Path: /nfs/movies                                                                                             │                     
                    │Quality Profile: HD - 1080p                                                                                               │                     
                    │Minimum Avai╭  Overview  ─────────────────────────────────────────────────────────────────────────────────────╮           │                     
                    │Monitored: Y│                                                                                                 │           │                     
                    │Search on Ad│                                                                                                 │           │                     
                    │            │ Loading ...                                                                                     │           │                     
                    │            │                                                                                                 │           │                     
                    │            │                                                                                                 │           │                     
                    │  Movies  ──│                                                                                                 │───────────│                     
                    │   ✔  Title │                                                                                                 │           │                     
                    │=> ✔  Test  │                                                                                                 │           │                     
                    │            │                                                                                                 │           │                     
                    │            │                                                                                                 │           │                     
                    │            │                                                                                                 │           │                     
                    │            │                                                                                                 │           │                     
                    │            │                                                                                                 │           │                     
                    │            │                                                                                                 │           │                     
                    │            │                                                                                                 │           │                     
                    │            │                                                                                                 │           │                     
                    │            │                                                                                                 │           │                     
                    │            │                                                                                                 │           │                     
                    │            │                                                                                                 │           │                     
                    │            │                                                                                                 │           │                     
                    │            │                                                                                                 │           │                     
                    │            │                                                                                                 │           │                     
                    │            │                                                                                                 │           │                     
                    │            │                                                                                                 │           │                     
                    │            │                                                                                                 │           │                     
                    │            │                                                                                                 │           │                     
                    │            │                                                                                                 │           │                     
                    │            │                                                                                                 │           │                     
                    │            ╰─────────────────────────────────────────────────────────────────────────────────────────────────╯           │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    ╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
